# kortex_3dpaint

./: CMakeLists.txt  LICENSE  README.md  jacobian.py  jacobian_test.launch  kinematics.py  package.xml  pick_and_place_moveit.launch
launch/: Dynamics.launch  arm_control.launch  aruco_detector.launch  aruco_detector_transtobase.launch  eyehand.launch  full_arm_control.launch  paint.lauch  paint.launch  paint_fixed_surface.launch  paint_minimal_motion.launch  pick_and_place.launch  pick_and_place_moveit.launch
src/arm_control/: arm_control.py  aruco_detector.py  aruco_detector_transtobase.py  full_arm_control.py
src/test/: Dynamics.py  aruco_detector.py  eyehand.py  pick_and_place.py  pick_and_place_moveit.py
src/test/swh/: path.py  way_point.py
src/test/szr/: camera_pos.py  minimal_motion_test.py  paint  paint.py  paint_fixed_surface.py
